added project section

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests"
-              >Interests</a
-            >
+            <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
           </li>
         </ul>
       </div>
@@ -113,7 +111,9 @@
             industry equivalence experience with a strong digital mindset to
             become a valued asset to your organization. I have prior experience
             with computer programming tutoring and I also have experience with
-            data science via my Public Interest Technology internship.
+            data science via my Public Interest Technology internship. When I'm
+            not programming I'm watching the UFC, playing video games, or
+            watching random videos on Youtube.
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
@@ -343,14 +343,82 @@
 
       <section
         class="resume-section p-3 p-lg-5 d-flex flex-column"
-        id="interests"
+        id="project"
       >
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>
-            When I'm not programming I'm watching the UFC, playing video games,
-            or watching random videos on Youtube.
-          </p>
+          <h2 class="mb-5">Projects</h2>
+          <ul class="list-unstyled d-flex w-50 gap-8 project-list">
+            <li>
+              <div>
+                <h5>Full-Stack Entertainment App</h5>
+                <div class="d-flex gap-2">
+                  <a
+                    href="https://github.com/ATEOTG/entertainment-app"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                  <p>|</p>
+                  <a
+                    href="https://entertainment-app-frontend.vercel.app/"
+                    target="_blank"
+                    >Live</a
+                  >
+                </div>
+              </div>
+              <img
+                src="./img/fullstackentapp.png"
+                alt="thumbnail for full-stack ent app"
+                class="w-235 h-136 rounded mb-2"
+              />
+              <p class="fst-italic">
+                React | SCSS | TypeScript | Node | Express | MongoDB
+              </p>
+            </li>
+            <li>
+              <div>
+                <h5>Front-End Multi-Step Form App</h5>
+                <div class="d-flex gap-2">
+                  <a
+                    href="https://github.com/ATEOTG/multi-step-form-app"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                  <p>|</p>
+                  <a
+                    href="https://ateotg.github.io/multi-step-form-app/"
+                    target="_blank"
+                    >Live</a
+                  >
+                </div>
+              </div>
+              <img
+                src="./img/frontendapp.png"
+                alt="thumbnail for front-end app"
+                class="w-235 h-136 rounded mb-2"
+              />
+              <p class="fst-italic">JavaScript | HTML | CSS/SCSS | MVC| Jest</p>
+            </li>
+            <li>
+              <div>
+                <h5>Back-End Radiant Music API App</h5>
+                <div class="d-flex gap-2">
+                  <a
+                    href="https://github.com/HeyyJett/Radiant-Music-App"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                  <p>|</p>
+                  <a href="">Live</a>
+                </div>
+              </div>
+              <img
+                src="./img/backendapp.png"
+                alt="thumbnail for back-end API app"
+                class="w-235 h-136 rounded mb-2"
+              />
+              <p class="fst-italic">Java | JDBC | MySQL | DAO</p>
+            </li>
+          </ul>
         </div>
       </section>
     </div>
